Fixed issues with SVGs displaying too big. All icons are now showing the correct size and color.

--- a/Victorious/WebApplication/Styles/less/Tournament/_Standings.less
+++ b/Victorious/WebApplication/Styles/less/Tournament/_Standings.less
@@ -5,6 +5,7 @@
     left: -100%;
     height: 100%;
     width: 100%;
+    overflow: auto;
 
     &.open {
         display: block;
@@ -24,7 +25,9 @@
     }
 
     .standings {
+        
         .list-table-body {
+            
             ul {
                 border-bottom: 1px solid @white;
                 padding: 1em 0em;
